Enhanced food analysis with AI simulation - more foods and nutrition info

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                         <input type="text" id="mealName" placeholder="اسم الوجبة (مثل: دجاج مشوي)">
                         <input type="number" id="mealCalories" placeholder="السعرات الحرارية">
                         <input type="number" id="mealProtein" placeholder="البروتين (جرام)">
+                        <input type="number" id="mealCarbs" placeholder="الكربوهيدرات (جرام)">
                         <button id="addMealBtn" class="save-btn">إضافة وجبة</button>
                     </div>
                 </div>
